--- a/fanqu/src/main/res/layout/birthday_picker_dialog_layout.xml
+++ b/fanqu/src/main/res/layout/birthday_picker_dialog_layout.xml
@@ -66,12 +66,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <com.qbgg.cenglaicengqu.main.widget.TimePickerLayout
+            <com.fanqu.main.widget.TimePickerLayout
                 android:id="@+id/time_picker_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-            </com.qbgg.cenglaicengqu.main.widget.TimePickerLayout>
+            </com.fanqu.main.widget.TimePickerLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
