--- a/fanqu/src/main/res/layout/fragment_person_layout.xml
+++ b/fanqu/src/main/res/layout/fragment_person_layout.xml
@@ -177,9 +177,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical"
                     android:layout_marginLeft="@dimen/dimen_30px"
-                    android:drawableLeft="@mipmap/ic_tab_meal_selected"
+                    android:drawableLeft="@mipmap/ic_mine_property"
                     android:drawablePadding="@dimen/dimen_10px"
-                    android:drawableStart="@mipmap/ic_tab_meal_selected"
+                    android:drawableStart="@mipmap/ic_mine_property"
                     android:gravity="center"
                     android:text="@string/mine_property"
                     android:textColor="@color/textGrayDeep"
