--- a/fanqu/src/main/res/layout/activity_recovered_password_layout.xml
+++ b/fanqu/src/main/res/layout/activity_recovered_password_layout.xml
@@ -37,23 +37,45 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <android.support.v7.widget.AppCompatEditText
-
-            android:id="@+id/phone_edit_text"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_200px"
-            android:layout_marginTop="@dimen/dimen_30px"
-            android:background="@drawable/edit_text_rect_border"
-            android:drawableLeft="@mipmap/ic_phone_username"
-            android:drawablePadding="@dimen/dimen_13px"
-            android:hint="@string/input_register_phone"
-            android:inputType="number"
-            android:maxLength="16"
-            android:paddingLeft="@dimen/dimen_13px"
-            android:singleLine="true"
-            android:textColor="@color/textGrayDeep"
-            android:textSize="@dimen/dimen_50px" />
-        />
+            android:background="@color/white"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
+
+            <android.support.v7.widget.AppCompatEditText
+
+                android:id="@+id/phone_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/dimen_30px"
+                android:background="@drawable/edit_text_rect_border"
+                android:drawableLeft="@mipmap/ic_phone_username"
+                android:drawablePadding="@dimen/dimen_13px"
+                android:hint="@string/input_register_phone"
+                android:inputType="number"
+                android:maxLength="11"
+                android:maxLines="1"
+                android:paddingLeft="@dimen/dimen_13px"
+                android:textColor="@color/textGrayDeep"
+                android:textSize="@dimen/dimen_50px" />
+
+            <ImageView
+                android:id="@+id/clear_pass"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/dimen_30px"
+                android:layout_toLeftOf="@id/phone_edit_text"
+                android:clickable="true"
+                android:contentDescription="@null"
+                android:padding="@dimen/dimen_8px"
+                android:src="@drawable/selector_clear_pass"
+                android:visibility="gone" />
+            />
+        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
@@ -73,12 +95,11 @@
                 android:drawablePadding="@dimen/dimen_13px"
                 android:hint="@string/input_send_code_password"
                 android:imeOptions="actionDone"
-                android:inputType="text"
-                android:maxLength="12"
+                android:inputType="number"
+                android:maxLength="6"
+                android:maxLines="1"
                 android:paddingLeft="@dimen/dimen_13px"
                 android:paddingRight="@dimen/dimen_23px"
-                android:password="true"
-                android:singleLine="true"
                 android:textColor="@color/textGrayDeep"
                 android:textSize="@dimen/dimen_50px" />
 
@@ -110,28 +131,41 @@
                 android:background="@drawable/edit_text_rect_border"
                 android:drawableLeft="@mipmap/ic_password"
                 android:drawablePadding="@dimen/dimen_13px"
-                android:hint="@string/input_new_password"
+                android:hint="@string/set_login_password"
                 android:imeOptions="actionDone"
-                android:inputType="text"
-                android:maxLength="12"
+                android:inputType="textPassword"
+                android:maxLength="20"
                 android:paddingLeft="@dimen/dimen_13px"
                 android:paddingRight="@dimen/dimen_23px"
-                android:password="true"
-                android:singleLine="true"
                 android:textColor="@color/textGrayDeep"
-                android:textSize="@dimen/dimen_50px" />
+                android:textSize="@dimen/dimen_50px"
+                android:maxLines="1" />
 
-            <ImageView
-                android:id="@+id/show_pass"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="@dimen/dimen_22px"
-                android:layout_toLeftOf="@id/user_pass"
-                android:clickable="true"
-                android:contentDescription="@null"
-                android:src="@drawable/selector_show_pass" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_200px">
+
+            <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/user_pass_affirm"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/edit_text_rect_border"
+                android:drawableLeft="@mipmap/ic_password"
+                android:drawablePadding="@dimen/dimen_13px"
+                android:hint="@string/affirm_password"
+                android:imeOptions="actionDone"
+                android:inputType="textPassword"
+                android:maxLength="20"
+                android:paddingLeft="@dimen/dimen_13px"
+                android:paddingRight="@dimen/dimen_23px"
+                android:textColor="@color/textGrayDeep"
+                android:textSize="@dimen/dimen_50px"
+                android:maxLines="1" />
+
+
         </RelativeLayout>
 
         <TextView
